# FinSenti

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  benchmark.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/routes/: batch.py  experiments.py  health.py  history.py  models.py  predict.py
backend/app/inference/: engine.py  postprocessing.py  preprocessing.py
backend/app/schemas/: experiment.py  predict.py
backend/tests/: conftest.py  test_batch.py  test_health.py  test_history.py  test_models.py  test_postprocessing.py  test_predict.py  test_preprocessing.py  test_root.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/batch/: page.tsx
frontend/src/app/experiments/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/models/: page.tsx
frontend/src/app/predict/: page.tsx
frontend/src/components/experiments/: MetricsTable.tsx
frontend/src/components/models/: ModelCard.tsx
frontend/src/components/predict/: SentimentGauge.tsx  SentimentInput.tsx  SentimentResult.tsx
frontend/src/lib/: api.ts  utils.ts
training/: compare_models.py  evaluate.py  pyproject.toml  register_model.py  requirements.txt  train.py
training/configs/: distilbert_lora.yaml  finbert_lora.yaml
training/data/: prepare_dataset.py
